many fixes in quote text wrapping

--- a/video_gfx/video_gfx/html_template/styles.css
+++ b/video_gfx/video_gfx/html_template/styles.css
@@ -47,35 +47,52 @@ body {
     width: 100%;
     height: 100%;
 }
+
+
+
 .quote-container {
     width: inherit;
     height: inherit;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .quote-box {
     background-color: #0ECAE3;
-    /* backdrop-filter: blur(200px); */
-    /* opacity: .9; */
+    font-size: 40px;
+    font-family: "Roboto Condensed";
+    clip-path: inset(0% 0% 0% 0%);
+
     max-width: 86%;
     max-height: 60%;
+    display:flex;
+    flex-direction: column;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.005);
+    /* text-rendering: optimizeLegibility !important; */
+    /* flex-wrap: nowrap; */
+
+    /* backdrop-filter: blur(200px); */
+    /* opacity: .9; */
     /* padding: 30px; */
-    font-family: "Roboto Condensed";
-    /* font-size: 40px; */
-    /* clip-path: inset(0% 0% 0% 0%); */
 }
 
 .quote-text-text {
     margin: 0;
+    font-weight: normal;
+    /* width:100%; */
 }
 
 .quote-author-text {
     margin: 0;
-    font-weight: bold;
+    width:inherit;
+    font-weight:bold;
     text-transform: uppercase;
+    font-size: 1px; /* will be overridden by js */
+
 }
+
 
 .midnight {
     background-color: #102C44;
